home/cors-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cors-proxy-new
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/target: kcfam.us
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`cors.new.kcfam.us`)
      kind: Rule
      services:
        - name: cors-proxy
          port: 80
  tls:
    secretName: new-kcfam-us-tls
---
## cors.kcfam.us's CNAME predates external-dns, so this route carries no target annotation.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cors-proxy
  namespace: home
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`cors.kcfam.us`)
      kind: Rule
      services:
        - name: cors-proxy
          port: 80
  tls:
    secretName: cors-kcfam-us-tls
